# agents

./: claude.md  pyproject.toml
1_foundations/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  5_extra.ipynb
2_openai/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb
2_openai/deep_research/: claude.md  email_agent.py  research_manager.py  writer_agent.py
2_openai/deep_research/reports/: 20260223_202649_Report on Proximal Policy Optimization _PPO_ Algorithm.html  20260223_202942_Proximal Policy Optimization _PPO_ Report.html  20260223_203756_Proximal Policy Optimization _PPO_ Report.html  20260223_204300_Proximal Policy Optimization _PPO__ A Comprehensive Overview.html  20260227_191720_Proximal Policy Optimization _PPO_ Report.html
3_crew/coder/: output.txt
3_crew/coder/output/: code_and_output.txt
3_crew/debate/output/: decide.md  oppose.md  propose.md
3_crew/thearchitect/: README.md  pyproject.toml
3_crew/thearchitect/src/thearchitect/: crew.py  main.py
3_crew/thearchitect/src/thearchitect/config/: agents.yaml
4_langchain_langgraph/community_contributions/: assignment 4_bright.ipynb
4_langgraph/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  memory.db-shm  memory.db-wal  sidekick.py
5_autogen/: 1_lab1_autogen_agentchat.ipynb  2_lab2_autogen_agentchat.ipynb  3_lab3_autogen_core.ipynb  4_lab4_autogen_distributed.ipynb  creator.py  messages.py
5_autogen/sandbox/: flights.md
6_mcp/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  5_lab5.ipynb  traders.py
6_mcp/sandbox/: banoffee.md
(+17 files in other folders)
