[project]
name = "thearchitect"
version = "0.1.0"
description = "thearchitect using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.6.1"
]

[project.scripts]
thearchitect = "thearchitect.main:run"
run_crew = "thearchitect.main:run"
train = "thearchitect.main:train"
replay = "thearchitect.main:replay"
test = "thearchitect.main:test"
run_with_trigger = "thearchitect.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
